Separando frontend e backend, melhorando arquitetura do projeto